# GMCP

./: docker-compose.yml  pyproject.toml  readme.md
auth/: auth_server.py
docker_files/: calendar.Dockerfile  gmail.Dockerfile  meet.Dockerfile  sheets.Dockerfile
google_auth/services/: google_calendar.py  google_mail.py  google_meet.py  google_sheets.py
mcp_server/: run_calendar_mcp.py  run_gmail_mcp.py  run_meet_mcp.py  run_sheets_mcp.py
models/: db.py
server-configs/: .env.example  mcp  mcp-auth.service  mcp-calendar.service  mcp-gmail.service  mcp-meet.service  mcp-sheets.service
